# python-cicd-project

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  pyproject.toml  requirements.txt
src/webee/: app.py  requirements.txt
src/webee/static/css/: styles.css
src/webee/static/js/: script.js
src/webee/templates/: index.html
tests/: test_app.py
